<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6B96CE90"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button0"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num3"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqu"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button5"
        android:layout_toEndOf="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num8"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/buttonSub"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_above="@+id/buttonAdd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#404E3535"
        android:text="@string/btnSub"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button6"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button8"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num9"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/buttonMul"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_above="@+id/buttonSub"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#404E3535"
        android:text="@string/btnMul"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonSub"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button3"
        android:layout_toEndOf="@+id/button5"
        android:layout_toRightOf="@+id/button5"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num6"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="20dp"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num7"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num0"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonAdd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="#404E3535"
        android:text="@string/btnAdd"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num1"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button0"
        android:layout_toEndOf="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num2"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/buttonEqu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_toEndOf="@+id/button0"
        android:layout_toRightOf="@+id/button0"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/btnEqu"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button2"
        android:layout_toEndOf="@+id/button4"
        android:layout_toRightOf="@+id/button4"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num5"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_marginLeft="20dp"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/num4"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonClear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#404E3535"
        android:text="@string/btnClr"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonDot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="16dp"
        android:background="#2A65DFD6"
        android:includeFontPadding="false"
        android:text="@string/dot"
        android:textSize="36sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDiv"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_above="@+id/buttonMul"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#404E3535"
        android:text="@string/btnDiv"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/buttonMul"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:gravity="right"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput" />

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:gravity="right"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>